syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (Order) {}
  rpc GetOrders (Empty) returns (OrderList) {}
  rpc GetOrder (GetOrderRequest) returns (Order) {}
  rpc UpdateOrder (UpdateOrderRequest) returns (Order) {}
  rpc DeleteOrder (DeleteOrderRequest) returns (Empty) {}
}

message Empty {}

message CreateOrderRequest {
  int32 userId = 1;
  int32 productId = 2;
  int32 quantity = 3;
  float totalPrice = 4;
}

message GetOrderRequest {
  int32 id = 1;
}

message UpdateOrderRequest {
  int32 id = 1;
  string status = 2;
  int32 quantity = 3;
  float totalPrice = 4;
}

message DeleteOrderRequest {
  int32 id = 1;
}

message Order {
  int32 id = 1;
  int32 userId = 2;
  int32 productId = 3;
  int32 quantity = 4;
  float totalPrice = 5;
  string status = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

message OrderList {
  repeated Order orders = 1;
}
